create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2952,7 +2952,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCuqTqok1m {
-  background-image: url("../../../assets/images/background40.jpg");
+  background-image: url("../../../assets/images/background42.jpg");
 }
 .cid-rCurmDdit5 {
   padding-top: 15px;
@@ -4861,7 +4861,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCA0xjRgfg {
-  background-image: url("../../../assets/images/background40.jpg");
+  background-image: url("../../../assets/images/background42.jpg");
 }
 .cid-rCA0xjRgfg H1 {
   text-align: center;
@@ -6186,7 +6186,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCCSEU8Lm8 {
-  background-image: url("../../../assets/images/background40.jpg");
+  background-image: url("../../../assets/images/background42.jpg");
 }
 .cid-rCCV9JdIBd {
   padding-top: 15px;
@@ -8497,7 +8497,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCFn8e2LwD {
-  background-image: url("../../../assets/images/background40.jpg");
+  background-image: url("../../../assets/images/background42.jpg");
 }
 .cid-rCFnGeprjX {
   padding-top: 15px;
@@ -9724,7 +9724,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rCUjPS03Nn {
-  background-image: url("../../../assets/images/background40.jpg");
+  background-image: url("../../../assets/images/background42.jpg");
 }
 .cid-rCUkh1SIzr {
   padding-top: 30px;
@@ -11347,7 +11347,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rDZTmLyIRF {
-  background-image: url("../../../assets/images/background40.jpg");
+  background-image: url("../../../assets/images/background42.jpg");
 }
 .cid-rE08WLv70b {
   padding-top: 30px;
@@ -12484,7 +12484,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rEy7PgwkMJ {
-  background-image: url("../../../assets/images/background40.jpg");
+  background-image: url("../../../assets/images/background42.jpg");
 }
 .cid-rEy8ze0i2y {
   padding-top: 15px;
@@ -12975,7 +12975,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rFMhXVBG3v {
-  background-image: url("../../../assets/images/background40.jpg");
+  background-image: url("../../../assets/images/background42.jpg");
 }
 .cid-rFMpvo2qRV {
   padding-top: 15px;
@@ -13525,7 +13525,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rGxfla9ASe {
-  background-image: url("../../../assets/images/background40.jpg");
+  background-image: url("../../../assets/images/background42.jpg");
 }
 .cid-rGxgHog3na {
   padding-top: 15px;
@@ -14583,7 +14583,7 @@ section.lazy-placeholder:after {
   background-color: #2e2e2e;
 }
 .cid-rH5SCxyf9r {
-  background-image: url("../../../assets/images/background40.jpg");
+  background-image: url("../../../assets/images/background42.jpg");
 }
 .cid-rHl6aQ33Pt {
   padding-top: 15px;
@@ -15736,10 +15736,10 @@ padding-bottom: (@paddingBottom * 15px);
 @showSubTitle: false;
 @showText: true;
 @showButtons: true;
-@uname__12: "file:///C:/Users/Mauricio/AppData/Local/Mobirise.com/Mobirise/projects/project-2019-09-18_224002/assets/images/background4.jpg";
+@uname__12: "file:///D:/UPCH/FUNDAMENTOS%20DE%20BIODISE%C3%91O/PAGINA%20WEB//assets/images/background42.jpg";
 @uname__13: false;
 @uname__14: #7f1933;
-@bg-value: "file:///C:/Users/Mauricio/AppData/Local/Mobirise.com/Mobirise/projects/project-2019-09-18_224002/assets/images/background4.jpg";
+@bg-value: "file:///D:/UPCH/FUNDAMENTOS%20DE%20BIODISE%C3%91O/PAGINA%20WEB//assets/images/background42.jpg";
 @bg-type: "image";
 @bg-color-value: #7f1933;
 @bg-parallax: false;
@@ -16793,7 +16793,7 @@ background-color: @bgColor;
 @showSubtitle: true;
 @showButtons: true;
 @reverseContent: false;
-@uname__10: "file:///C:/Users/Mauricio/AppData/Local/Mobirise.com/Mobirise/projects/project-2019-09-18_224002/assets/images/background8.jpg";
+@uname__10: "file:///D:/UPCH/FUNDAMENTOS%20DE%20BIODISE%C3%91O/PAGINA%20WEB//assets/images/background8.jpg";
 @uname__11: false;
 @uname__12: #ffffff;
 @bg-value: #ffffff;
@@ -17220,14 +17220,74 @@ H2 {
   background-color: #2e2e2e;
 }
 .cid-rHW1uf5qIu {
-  background-image: url("../../../assets/images/background40.jpg");
+  background-image: url("../../../assets/images/background42.jpg");
 }
-.cid-rHW1SKvkZL {
+.cid-rIMWpTSdtc {
   padding-top: 15px;
   padding-bottom: 15px;
   background-color: #ffffff;
 }
-.cid-rHW1SKvkZL .mbr-section-subtitle {
+.cid-rIMWpTSdtc .mbr-section-subtitle {
+  color: #767676;
+  text-align: left;
+}
+.cid-rIMUK8yYnb {
+  background: #ffffff;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+.cid-rIMUK8yYnb .image-block {
+  margin: auto;
+}
+.cid-rIMUK8yYnb figcaption {
+  position: relative;
+}
+.cid-rIMUK8yYnb figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-rIMUK8yYnb .image-block {
+    width: 100% !important;
+  }
+}
+.cid-rIMUJzIbQE {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-rIMUJzIbQE .mbr-section-subtitle {
+  color: #767676;
+  text-align: left;
+}
+.cid-rIMUs3PHKZ {
+  background: #ffffff;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+.cid-rIMUs3PHKZ .image-block {
+  margin: auto;
+}
+.cid-rIMUs3PHKZ figcaption {
+  position: relative;
+}
+.cid-rIMUs3PHKZ figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-rIMUs3PHKZ .image-block {
+    width: 100% !important;
+  }
+}
+.cid-rIMUsBKmJX {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-rIMUsBKmJX .mbr-section-subtitle {
   color: #767676;
   text-align: left;
 }
@@ -17252,12 +17312,12 @@ H2 {
     width: 100% !important;
   }
 }
-.cid-rHW1T5tSkq {
+.cid-rHW1SKvkZL {
   padding-top: 15px;
   padding-bottom: 15px;
   background-color: #ffffff;
 }
-.cid-rHW1T5tSkq .mbr-section-subtitle {
+.cid-rHW1SKvkZL .mbr-section-subtitle {
   color: #767676;
   text-align: left;
 }
@@ -17282,12 +17342,12 @@ H2 {
     width: 100% !important;
   }
 }
-.cid-rHW1TmQfcn {
+.cid-rHW1T5tSkq {
   padding-top: 15px;
   padding-bottom: 15px;
   background-color: #ffffff;
 }
-.cid-rHW1TmQfcn .mbr-section-subtitle {
+.cid-rHW1T5tSkq .mbr-section-subtitle {
   color: #767676;
   text-align: left;
 }
@@ -17312,12 +17372,12 @@ H2 {
     width: 100% !important;
   }
 }
-.cid-rHW1TCLY5o {
+.cid-rHW1TmQfcn {
   padding-top: 15px;
   padding-bottom: 15px;
   background-color: #ffffff;
 }
-.cid-rHW1TCLY5o .mbr-section-subtitle {
+.cid-rHW1TmQfcn .mbr-section-subtitle {
   color: #767676;
   text-align: left;
 }
@@ -17342,12 +17402,12 @@ H2 {
     width: 100% !important;
   }
 }
-.cid-rHW1TXq77Y {
+.cid-rHW1TCLY5o {
   padding-top: 15px;
   padding-bottom: 15px;
   background-color: #ffffff;
 }
-.cid-rHW1TXq77Y .mbr-section-subtitle {
+.cid-rHW1TCLY5o .mbr-section-subtitle {
   color: #767676;
   text-align: left;
 }
@@ -17372,12 +17432,12 @@ H2 {
     width: 100% !important;
   }
 }
-.cid-rHW1UsxyzZ {
+.cid-rHW1TXq77Y {
   padding-top: 15px;
   padding-bottom: 15px;
   background-color: #ffffff;
 }
-.cid-rHW1UsxyzZ .mbr-section-subtitle {
+.cid-rHW1TXq77Y .mbr-section-subtitle {
   color: #767676;
   text-align: left;
 }
@@ -17402,12 +17462,12 @@ H2 {
     width: 100% !important;
   }
 }
-.cid-rHW1Ss9btt {
+.cid-rHW1UsxyzZ {
   padding-top: 15px;
   padding-bottom: 15px;
   background-color: #ffffff;
 }
-.cid-rHW1Ss9btt .mbr-section-subtitle {
+.cid-rHW1UsxyzZ .mbr-section-subtitle {
   color: #767676;
   text-align: left;
 }
@@ -17432,12 +17492,12 @@ H2 {
     width: 100% !important;
   }
 }
-.cid-rHW1S8Kuwp {
+.cid-rHW1Ss9btt {
   padding-top: 15px;
   padding-bottom: 15px;
   background-color: #ffffff;
 }
-.cid-rHW1S8Kuwp .mbr-section-subtitle {
+.cid-rHW1Ss9btt .mbr-section-subtitle {
   color: #767676;
   text-align: left;
 }
@@ -17462,12 +17522,12 @@ H2 {
     width: 100% !important;
   }
 }
-.cid-rHW1RMKrR0 {
+.cid-rHW1S8Kuwp {
   padding-top: 15px;
   padding-bottom: 15px;
   background-color: #ffffff;
 }
-.cid-rHW1RMKrR0 .mbr-section-subtitle {
+.cid-rHW1S8Kuwp .mbr-section-subtitle {
   color: #767676;
   text-align: left;
 }
@@ -17492,12 +17552,12 @@ H2 {
     width: 100% !important;
   }
 }
-.cid-rHW1QRlw4y {
+.cid-rHW1RMKrR0 {
   padding-top: 15px;
   padding-bottom: 15px;
   background-color: #ffffff;
 }
-.cid-rHW1QRlw4y .mbr-section-subtitle {
+.cid-rHW1RMKrR0 .mbr-section-subtitle {
   color: #767676;
   text-align: left;
 }
@@ -17522,12 +17582,12 @@ H2 {
     width: 100% !important;
   }
 }
-.cid-rHW1RlDqtp {
+.cid-rHW1QRlw4y {
   padding-top: 15px;
   padding-bottom: 15px;
   background-color: #ffffff;
 }
-.cid-rHW1RlDqtp .mbr-section-subtitle {
+.cid-rHW1QRlw4y .mbr-section-subtitle {
   color: #767676;
   text-align: left;
 }
@@ -17549,6 +17609,45 @@ H2 {
 }
 @media (max-width: 768px) {
   .cid-rHW2bFkdVJ .image-block {
+    width: 100% !important;
+  }
+}
+.cid-rHW1RlDqtp {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-rHW1RlDqtp .mbr-section-subtitle {
+  color: #767676;
+  text-align: left;
+}
+.cid-rIMQuTyzz0 {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-rIMQuTyzz0 .mbr-section-subtitle {
+  color: #767676;
+  text-align: left;
+}
+.cid-rIMQwLLpEK {
+  background: #ffffff;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+.cid-rIMQwLLpEK .image-block {
+  margin: auto;
+}
+.cid-rIMQwLLpEK figcaption {
+  position: relative;
+}
+.cid-rIMQwLLpEK figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-rIMQwLLpEK .image-block {
     width: 100% !important;
   }
 }
@@ -17953,12 +18052,20 @@ H2 {
   background-color: #2e2e2e;
 }
 .cid-rIEKks1NKG {
-  background-image: url("../../../assets/images/background40.jpg");
+  background-image: url("../../../assets/images/background42.jpg");
+}
+.cid-rIFim7HgIC {
+  padding-top: 15px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rIFim7HgIC .mbr-section-subtitle {
+  color: #767676;
 }
 .cid-rIFctssa7i {
   background: #ffffff;
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   background: linear-gradient(45deg, #ffffff, #b2ccd2);
 }
 .cid-rIFctssa7i .video-block {
@@ -17977,25 +18084,39 @@ H2 {
 .cid-rIFfYL0nU0 .mbr-section-subtitle {
   color: #767676;
 }
-.cid-rIFfx9sNTC {
-  background: #0f7699;
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background: linear-gradient(0deg, #cc2952, #0f7699);
+.cid-rIFiRmQrnu {
+  background: #ffffff;
+  padding-top: 15px;
+  padding-bottom: 0px;
 }
-.cid-rIFfx9sNTC .image-block {
+.cid-rIFiRmQrnu .image-block {
   margin: auto;
 }
-.cid-rIFfx9sNTC figcaption {
+.cid-rIFiRmQrnu figcaption {
   position: relative;
 }
-.cid-rIFfx9sNTC figcaption div {
+.cid-rIFiRmQrnu figcaption div {
   position: absolute;
   bottom: 0;
   width: 100%;
 }
 @media (max-width: 768px) {
-  .cid-rIFfx9sNTC .image-block {
+  .cid-rIFiRmQrnu .image-block {
     width: 100% !important;
   }
+}
+.cid-rIFiGae69r {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rIFiGae69r .mbr-section-subtitle {
+  color: #767676;
+  text-align: center;
+}
+.cid-rIFiGae69r .btn {
+  margin: 0 0 .5rem 0;
+}
+.cid-rIFiGae69r H2 {
+  color: #ff3366;
 }
